--- a/wwwroot/css/sass/_containers.scss
+++ b/wwwroot/css/sass/_containers.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-image: url("/images/sound-wave-equalizer.jpg");
+	background-image: url("./images/sound-wave-equalizer.jpg");
 	background-size: contain;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
