--- a/wwwroot/css/sass/_fonts.scss
+++ b/wwwroot/css/sass/_fonts.scss
@@ -14,6 +14,11 @@
 	}
 }
 
+h1.home-title {
+	font-family: "Bookman Old Style";
+	color: $header-title-color;
+}
+
 footer.navbar-dark {
 	color: $header-footer-color;
 
