Fix header brand link

--- a/wwwroot/templates/header.html
+++ b/wwwroot/templates/header.html
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="./">
         <svg class="bi" width="1em" height="1em" fill="currentColor">
             <use xlink:href="icons/bootstrap/bootstrap-icons.svg#volume-up-fill"></use>
         </svg>
