Updated titles Fixed email/phone on mobile contact

--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -17,7 +17,7 @@ html {
   .logo a {
     text-decoration: none; }
 
-h1.home-title {
+h1.title {
   font-family: "Bookman Old Style";
   color: #cc0033; }
 
