--- a/wwwroot/css/sass/_colors.scss
+++ b/wwwroot/css/sass/_colors.scss
@@ -1,4 +1,4 @@
 ﻿$main-background-color: rgba(255,255,255,0.8);
 $default-color: #111;
 $header-footer-color: #eee;
-$header-title-color: #cc0033;
+$title-color: #cc0033;
