--- a/wwwroot/css/sass/_fonts.scss
+++ b/wwwroot/css/sass/_fonts.scss
@@ -14,9 +14,9 @@
 	}
 }
 
-h1.home-title {
+h1.title {
 	font-family: "Bookman Old Style";
-	color: $header-title-color;
+	color: $title-color;
 }
 
 footer.navbar-dark {
